sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: '<-' expected but ')' found.
for (k<1-to largeur-1) {
                     ^AlgBubbleSort1:12: error: illegal start of simple expression
}
^